--- a/src/index.css
+++ b/src/index.css
@@ -218,4 +218,8 @@
   .hidden_on_sm {
     @apply hidden md:flex;
   }
+
+  .page_container {
+    @apply py-6 px-4 md:px-8 lg:px-10 box-border;
+  }
 }
