Feature: Quote information component built

--- a/src/index.css
+++ b/src/index.css
@@ -82,121 +82,121 @@
 */
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-VariableItalic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-VariableItalic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-VariableItalic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-VariableItalic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-VariableItalic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-VariableItalic.ttf') format('truetype');
   font-weight: 300 900;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Light.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Light.woff") format("woff"),
-    url("./assets/fonts/Satoshi-Light.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Light.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Light.woff') format('woff'),
+    url('./assets/fonts/Satoshi-Light.ttf') format('truetype');
   font-weight: 300;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-LightItalic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-LightItalic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-LightItalic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-LightItalic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-LightItalic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Regular.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Regular.woff") format("woff"),
-    url("./assets/fonts/Satoshi-Regular.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Regular.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Regular.woff') format('woff'),
+    url('./assets/fonts/Satoshi-Regular.ttf') format('truetype');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Italic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Italic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-Italic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Italic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Italic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-Italic.ttf') format('truetype');
   font-weight: 400;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Medium.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Medium.woff") format("woff"),
-    url("./assets/fonts/Satoshi-Medium.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Medium.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Medium.woff') format('woff'),
+    url('./assets/fonts/Satoshi-Medium.ttf') format('truetype');
   font-weight: 500;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-MediumItalic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-MediumItalic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-MediumItalic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-MediumItalic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-MediumItalic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Bold.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Bold.woff") format("woff"),
-    url("./assets/fonts/Satoshi-Bold.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Bold.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Bold.woff') format('woff'),
+    url('./assets/fonts/Satoshi-Bold.ttf') format('truetype');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-BoldItalic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-BoldItalic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-BoldItalic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-BoldItalic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-BoldItalic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-display: swap;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-Black.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-Black.woff") format("woff"),
-    url("./assets/fonts/assets/Satoshi-Black.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-Black.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-Black.woff') format('woff'),
+    url('./assets/fonts/assets/Satoshi-Black.ttf') format('truetype');
   font-weight: 900;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Satoshi";
+  font-family: 'Satoshi';
   src:
-    url("./assets/fonts/Satoshi-BlackItalic.woff2") format("woff2"),
-    url("./assets/fonts/Satoshi-BlackItalic.woff") format("woff"),
-    url("./assets/fonts/Satoshi-BlackItalic.ttf") format("truetype");
+    url('./assets/fonts/Satoshi-BlackItalic.woff2') format('woff2'),
+    url('./assets/fonts/Satoshi-BlackItalic.woff') format('woff'),
+    url('./assets/fonts/Satoshi-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-display: swap;
   font-style: italic;
@@ -220,6 +220,6 @@
   }
 
   .page_container {
-    @apply py-6 px-4 md:px-8 lg:px-10 box-border;
+    @apply py-6 px-4 md:px-6 box-border;
   }
 }
